uibase/src/styles/EcoreApp.css
/* EcoreApp */

/* Resource editor */
header {
	position: fixed;
	width: 100%;
	left: 0;
	top: 0;
	z-index: 10000;
	margin-bottom: 100px;
}

.head-panel{
	padding: 4px 3px;
	height: 40px !important;
	display: inline-flex;
	align-items: baseline;
	/*justify-content: center;*/
	box-shadow: 1px 1px 10px #e1e1e1;
	margin-bottom: 2px;
	background-color: #fdfdfd;
}

.panel-button {
	margin-left: 13px;
	border: 0;
	box-shadow: none;
	background-color: #fbfbfb;
}

.panel-icon {
	width: 32px;
	height: 32px;
	margin-left: 13px;
	color: #61dafb
}

.view-box{
	padding: 20px;
}

.resource-container {
	overflow-x: hidden;
	overflow-y: auto;
	padding: 0px 6px 8px 0px;
	height: 420px;
}
.resource-container::-webkit-scrollbar{
	width: 0;
}

.resource-container-item {
	display: flex;
	margin: 10px 0px 0px auto; 
	text-align: center;
	border: none;
    box-shadow: 3px 3px 4px 0px #e0e0e0;
    border-radius: 0px;
	min-height: 35px;
	background: #ffffff;
}

.item-close-button {
	display: inline-block;
	border: none;
	box-shadow: none;
}

.item-title {
	display: inline-block;
	user-select: none; 
	margin-top: 6px;
	/*white-space: nowrap;*/
	width: 70%;
	text-overflow: ellipsis;
	overflow: hidden;
	word-wrap: break-word;

}

.dropMenuApps {
	display: none;
}



@media screen and (max-width: 1100px){
	.item-title {
		width: 40px;
	}
	.btn-appName span {
		white-space: pre-line;
		font-size: 0.75rem;
	}
	.dropMenuApps {
		display: block;
	}
	header .header-menu span span {
		display: none;
	}
}

header .header-menu span span {
	margin-left: 5px;
}

header .header-menu{
	float: right;
	/*line-height: 60px;*/
	border: none;
	background-color: #2a356c;
	padding: 0 5px;
	text-align: center;
}

.resource-link {
	color: inherit;
}

.lang-label{
	width: auto;
    float: right;
    margin-top: -5px;
	color: #ffffff;
    font-weight: 100;
	text-align: center;
}

.lang-label-login{
    width: 35px;
    height: 35px;
    float: right;
    margin-top: -10px;
    margin-right: 10px;
    color: #189dff;
    text-shadow: 1px 1px 2px #d8d8d8;
    font-weight: 100;
}

@media screen and (max-width: 700px) , screen and (max-height: 600px) {
    .lang-label-login {
        width: 35px;
        height: 35px;
        float: right;
        margin-top: -25px;
        margin-right: 23px;
        color: rgb(18, 18, 18);
        text-shadow: 1px 1px 2px #d8d8d8;
        font-weight: 100;
    }
}

.ant-layout-sider-zero-width-trigger{
	bottom: 0px !important;
	top: unset !important;
	background-color: transparent !important;
	color: #b4b4b4 !important;
	font-size: 20px;
	z-index: 2;
}

.loader {
	position: absolute;
	top: calc(30%);
	left: calc(40%);
	width: 250px;
	height: 250px;
	border-radius: 100%;
	perspective: 1000px;
}

.ant-btn {
	border: none;
}


li .lang-title, .ant-menu-item, .ant-menu-item>a, .ant-menu, .header-menu {
	color: #ffffff;
}

li:hover .lang-title {
	color: #2a356c;
}

.ant-menu-item, .ant-menu-submenu-popup, .ant-menu-submenu > .ant-menu {
	background-color: #2a356c;
}

.logout-icon {
	margin-top: 18px;
	width: 25px;
	background-image: url("../icons/logoutIcon.svg") !important;
	background-repeat:  no-repeat !important;
}

.developer-icon {
	padding: 0;
	/*margin-top: 23px;*/
	width: 15px;
	height: 15px;
	/*margin-right: 15px;*/
	background-image: url("../icons/developer-icon.svg") !important;
	background-repeat:  no-repeat !important;
	color: white;
}

.btn-appName{
	font-size: 16px !important;
	width: auto !important;
}
.btn-appName:hover span, .bell-icon:hover, .lang-label:hover, .ant-menu-item-selected>a {
	color: white;
}

/*HeaderPanel in Dev*/

.ant-menu-item{
	border-bottom: unset!important;
	opacity: 0.5;
	font-size: 16px;
}
.ant-menu-item:hover{
	opacity: 1!important;
}

.ant-menu-item-selected{
	opacity: 1!important;
}

